--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
     #bcffef 60px
   );
 }
-
 h1{
   display: flex;
   padding: 0 30px 40px 15px;
@@ -45,11 +44,10 @@ h1{
     height: 100px;
   }
 }
-
 /* btn */
-#CarritoFrutero{
+#abrir-canasta{
   display: flex;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   justify-self: center;
   justify-content: center;
   align-items: center;
@@ -58,50 +56,126 @@ h1{
   border: 4px solid #005c5c;
   border-radius: 50%;
   background-color: #6dccb6;
+  .bi-basket{
+    font-size: 40px;
+    color:#005c5c;
+  }
 }
-.bi-basket{
-  font-size: 40px;
-  color:#005c5c;
+#cerrar-canasta{
+  color: black;
+  border: 2px solid black;
+  border-radius: 15px;
+  background-color:#eb452b ;
+  .bi-x-circle{
+    font-size: 20px;
+  }
 }
-
 /* Contenedor frutas */
 #contenedorFrutas{
   display: flex;
+  width: 605px;
   padding: 10px;
   flex-wrap: wrap;
   justify-self: center;
-  width:500px;
 }
-
 .card{
   display: flex;
   margin: 10px;
-  width: 220px;
+  width: 175px;
   border-radius: 20px;
 }
-
 .card-img-top{
-  height: 160px;
+  height: 120px;
   object-fit:cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-
-@media (max-width: 500px) {
+@media (max-width: 410px) {
   #contenedorFrutas{
     justify-content: center;
     width: auto;
   }
   .card{
-    width: 90%;
+    width: 80%;
   }
   .card-img-top{
-    height: 180px;
+    height: 140px;
   }
 }
-@media (min-width: 740px){
+@media (max-width: 767px){
   #contenedorFrutas{
-    width: 740px;
+    width: 410px;
+  }
+}
+/* Modal */
+.modalCanasta {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  transition: all .5s;
+  opacity: 0;
+  visibility: hidden;
+  backdrop-filter: blur(10px);
+  h2{
+    font-size: 2rem;
+    display: flex;
+    color:#005c5c ;
+    border: 4px solid #005c5c;
+    border-radius: 20px;
+    background-color: #6dccb6;
+    padding: 10px;
   }
 }
 
+.modal-activo {
+  opacity: 1;
+  visibility: visible;
+  z-index: 5;
+}
+/* producto en carrito */
+#carritoFrutas{
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  width: 360px;
+  height: 200px;
+}
+@media (max-width: 360px){
+  #carritoFrutas{
+    width: 170px;
+  }
+}
+.frutaEnCarrito{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  align-items: center;
+  background-color: aliceblue;
+  margin: 10px;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+.botonEliminar{
+  color: #c11a2b;
+  border: 2px solid #c11a2b;
+  border-radius: 20px;
+}
+#total{
+  display: flex;
+  border: 4px solid #005c5c;
+  border-radius: 15px;
+  background-color: #6dccb6;
+  justify-items: center;
+  padding: 10px;
+  line-height: 1;
+  color: #005c5c;
+  margin-top: 10px;
+  p{
+    margin: 0;
+  }
+}
